# digitalis

./: .editorconfig  .gitignore  Cargo.toml  README.md  flake.nix  go.mod  package-lock.json  package.json
cmd/digitalis/: main.go
internal/: library.go
mobile/: app.json  package-lock.json
react-native/: package.json
src/: lib.rs
